--- a/nginx_accel_redirect_form.css
+++ b/nginx_accel_redirect_form.css
@@ -1,2 +1,2 @@
 /* Styling for nginx_accel_redirect module settings form. */
-#edit-nginx-accel-redirect-config-suggestion { font-family: monospace; }
+#edit-nginx-accel-redirect-config-suggestion, #edit-nginx-accel-redirect-advanced-config-suggestion { font-family: monospace; }
